1. Collection API Улучшения[#159058]