@@ -1,7 +1,8 @@
 package ru.job4j.list;
 
 import org.junit.Test;
-import java.util.Arrays;
+
+import java.util.ArrayList;
 import java.util.List;
 import static org.hamcrest.core.Is.is;
 import static org.junit.Assert.assertThat;
@@ -18,9 +19,9 @@ public class ConvertMatrix2ListTest {
                 {1, 2},
                 {3, 4}
         };
-        List<Integer> expect = Arrays.asList(
+        List<Integer> expect = new ArrayList<>(List.of(
                 1, 2, 3, 4
-        );
+        ));
         List<Integer> result = list.toList(input);
         assertThat(result, is(expect));
     }
